metadata/force-app/main/default/objects/CustomName_TOOfj__c/CustomName_TOOfj__c.object-meta.xml
<CustomObject>
    <description>Description_zPQxd</description>
    <label>CustomLabel_ppeDW</label>
    <nameField>
        <label>CustomLabel_ppeDW</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ppeDWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>