metadata/force-app/main/default/objects/CustomName_TOOfj__c/fields/CustomField_aeMQo__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aeMQo__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielduAZvo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>